# Cyanite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vendor.yml
docs/Cyanite/: package.json
resources/: microsoft.windows.cppwinrt.2.0.210913.7.nupkg  plist.in
shaders/: fragment_base.hlsl  vertex_base.hlsl
src/: Globals.hxx
src/api/: CMakeLists.txt  Package.resolved  Package.swift
src/api/.swiftpm/xcode/package.xcworkspace/xcuserdata/marcelkulina.xcuserdatad/: UserInterfaceState.xcuserstate
src/api/.swiftpm/xcode/xcuserdata/marcelkulina.xcuserdatad/xcschemes/: xcschememanagement.plist
src/api/Assembly/: AIFlow.swift  Cyanite.swift  DynamicLibrary.swift  PlayerFlow.swift  UserCodeDummy.swift
src/api/Audio/: AudioSource.swift
src/api/Bridge/: NativeArray.swift
src/api/CK/include/: ControllerKit.h  Types.h
src/api/ECS/: AudioComponent.swift  Component.swift  Entity.swift  Flow.swift  MoveComponent.swift  RotateComponent.swift  Transform2DComponent.swift  Transform3DComponent.swift  TransformComponent.swift  TransformComponent3D.swift
src/api/Graphics2D/: Sprite.swift
src/api/Graphics3D/: Mesh.swift
src/api/Input/: CMakeLists.txt  Input.swift
src/api/Math/: Matrix3x3.swift  Matrix4x4.swift  Vector2.swift  Vector3.swift
src/api/Native/: Cyanite.c
src/api/Native/include/: Cyanite.h  Main.hxx
src/api/SDLRaw/include/: SDL_event.c  SDL_event.h
src/api/SystemInfo/: Info.cpp
src/api/SystemInfo/include/: Info.h
src/api/Time/: Time.swift
src/api/UI/: UIButton.swift  UIElement.swift  UIInput.swift  UILabel.swift  UIRect.swift  UIVIew.swift
src/api/internal/: CMakeLists.txt  Cyanite.swift  DynamicLibrary.swift  Engine.swift  Logger.swift  Mesh.swift  SDLService.swift  Vector2.swift  Vector3.swift
src/core/: Entry.hxx  Globals.hxx  Main.cxx  Main.hxx
src/core/osx/: Main.mm
src/core/win32/: Main.cxx
src/engine/: CMakeLists.txt  Component.hxx  CyaniteEngine.cxx  CyaniteEngine.hxx  Entity.cxx  Entity.hxx  EntityExclusive.hxx  EntityRegistry.cxx  EntityRegistry.hxx  EntitySet.cxx  EntitySet.hxx  Input.hxx  Transform.hxx
src/engine/Events/: CMakeLists.txt  Event.hxx  EventQueue.cxx  EventQueue.hxx  InputEvent.hxx  MouseEvent.hxx
src/engine/Logging/: CMakeLists.txt  Log.hxx  Logger.hxx
src/engine/Logging/win32/: Logger.cxx
src/engine/Rendering/: CMakeLists.txt  Camera.cxx  Camera.hxx  Color.hxx  Light.hxx  RenderBackend.hxx  RenderBackendD3D12.cxx  RenderBackendD3D12.hxx  RenderBackendVulkan.cxx  RenderBackendVulkan.hxx  Renderer.cxx  Renderer.hxx  Scene.hxx
src/engine/Rendering/d3d12/: d3dx12.h
src/engine/Rendering/vulkan/: DeviceInfo.hxx  Swapchain.hxx
src/engine/SDL/: SDLx.c  SDLx.h
src/engine/System/: CMakeLists.txt  File.cxx  File.hxx
src/engine/Worlds/: CMakeLists.txt  Matrix4x4.hxx  Quaternion.cxx  Quaternion.hxx  Transform.hxx  Vector3D.cxx  Vector3D.hxx  World.hxx
